# IUMA_Introduction-to-Universal-Micro-Alchemy

./: .gitignore  IUMA-Introduction to Universal Micro Alchemy  design.txt
iuma/: Cargo.toml  README.md
iuma/assets/shaders/: field_material.wgsl
iuma/docs/: ARCHITECTURE.md
iuma/src/: camera.rs  components.rs  main.rs  physics.rs  render.rs  resources.rs  ui.rs
