[package]
name = "iuma"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13", features = ["dynamic_linking"] } # dynamic_linking speeds up compile time during dev
bevy_egui = "0.27"
rand = "0.8"

# Optimization profiles for simulation performance
[profile.dev]
opt-level = 1

# Maximize performance of dependencies even in debug mode
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1